--- a/src/pages/EmployeePage.css
+++ b/src/pages/EmployeePage.css
@@ -1,3 +1,6 @@
+.main{
+    margin-left: 5px;
+}
 .personal-info{
     height: 200px;
     width: 100%;
@@ -5,3 +8,16 @@
     border-style: dashed; */
     display: flex;
 }
+.tasks {
+    
+    /* margin: 0 auto; */
+    margin-left: 5px;
+    padding: 1rem;
+    width: 90%;
+    max-width: 50rem;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+    border-radius: 6px;
+    background: white;
+    margin-top: 5px;
+    display: flex;    
+  }
